Segundo Commit: Cambio visual de las cards

--- a/index.html
+++ b/index.html
@@ -147,21 +147,23 @@
     <!--section izquierda-->
     <section class="left">
       <!--titulo subtitulo-->
-      <h1>Veterinarios</h1>
+      <h1>TODO EN UNA PAGINA</h1>
       <h2>Encontra los mejores especialistas para tu mascota</h2>
 
       <!--selecciona animal-->
       <section class="animales">
-        <article class="animales__items">
-          <img src="img/icons8-animal-shelter-96.png" />
-          <span class="text">Gato o Perro</span>
-        </article>
-        <article class="animales__items">
-          <img src="img/icons8-conejo-96.png" alt="" />
-          <img src="img/icons8-rectangular-aquarium-96.png" alt="" />
-          <img src="img/icons8-hámster-96.png" alt="" />
-          <span class="text">Otros Animales</span>
-        </article>
+        <button class="animales__items">
+          <img src="img/icons8-veterinary-96.png" />
+          <span class="text">VETERINARIOS</span>
+        </button>
+        <button class="animales__items">
+          <img src="img/hospital.png" alt="" />
+          <span class="text">HOSPITALES</span>
+        </button>
+        <button class="animales__items">
+          <img src="img/icons8-pet-shop-96.png" alt="" />
+          <span class="text">PET SHOP</span>
+        </button>
       </section>
 
       <!--buscador para el mapa todavia no funca. y el ubicacion-->
@@ -224,6 +226,7 @@
     </section>
 
     <!--footer-->
+    
     <footer class="footer">
       <div class="section fp-auto-height">
         <div class="footer">
