cambio de index.html a veterinarios y cambio de css

--- a/veterinarios.html
+++ b/veterinarios.html
@@ -10,7 +10,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="scss/estilos.css" />
+    <link rel="stylesheet" href="scss/estilosbrian.css" />
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
       rel="stylesheet"
